// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest should render with compact prop 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    role="combobox"
  >
    <div
      class="root compact"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="undefined-message"
        autocomplete="off"
        class="input"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root sizeSmall clearRoot"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class=""
              focusable="false"
              role="img"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Negative
              </title>
              <path
                d="M100 50c0 27.6-22.4 50-50 50S0 77.6 0 50 22.4 0 50 0s50 22.4 50 50zm-44.3 0l12.6-12.6c.8-.8.8-2.1 0-2.8l-2.8-2.8c-.8-.8-2.1-.8-2.8 0L50 44.3 37.4 31.7c-.8-.8-2.1-.8-2.8 0l-2.8 2.8c-.8.8-.8 2.1 0 2.8L44.3 50 31.7 62.6c-.8.8-.8 2.1 0 2.8l2.8 2.8c.8.8 2.1.8 2.8 0L50 55.7l12.6 12.6c.8.8 2.1.8 2.8 0l2.8-2.8c.8-.8.8-2.1 0-2.8L55.7 50z"
              />
            </svg>
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
  <div
    class="autosuggestBackdrop"
  />
</div>
`;

exports[`Autosuggest should render with label 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    role="combobox"
  >
    <div
      class="root"
    >
      <label
        class=""
        for="Foo"
      >
        <span
          class="root baseline"
        >
          <span
            class=""
          >
            <strong
              class="root"
            >
              Foo
            </strong>
             
          </span>
        </span>
      </label>
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="Foo-message"
        autocomplete="off"
        class="input"
        id="Foo"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root sizeSmall clearRoot"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class=""
              focusable="false"
              role="img"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Negative
              </title>
              <path
                d="M100 50c0 27.6-22.4 50-50 50S0 77.6 0 50 22.4 0 50 0s50 22.4 50 50zm-44.3 0l12.6-12.6c.8-.8.8-2.1 0-2.8l-2.8-2.8c-.8-.8-2.1-.8-2.8 0L50 44.3 37.4 31.7c-.8-.8-2.1-.8-2.8 0l-2.8 2.8c-.8.8-.8 2.1 0 2.8L44.3 50 31.7 62.6c-.8.8-.8 2.1 0 2.8l2.8 2.8c.8.8 2.1.8 2.8 0L50 55.7l12.6 12.6c.8.8 2.1.8 2.8 0l2.8-2.8c.8-.8.8-2.1 0-2.8L55.7 50z"
              />
            </svg>
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer suggestionsContainer_withLabel"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
  <div
    class="autosuggestBackdrop"
  />
</div>
`;

exports[`Autosuggest should render with mobile backdrop 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    role="combobox"
  >
    <div
      class="root"
    >
      <label
        class="isLabelCoveredWithBackdrop LABEL_TEST_CLASS"
        for="Foo"
      >
        <span
          class="root baseline"
        >
          <span
            class=""
          >
            <strong
              class="root"
            >
              Foo
            </strong>
             
          </span>
        </span>
      </label>
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="Foo-message"
        autocomplete="off"
        class="input"
        id="Foo"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root sizeSmall clearRoot"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class=""
              focusable="false"
              role="img"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Negative
              </title>
              <path
                d="M100 50c0 27.6-22.4 50-50 50S0 77.6 0 50 22.4 0 50 0s50 22.4 50 50zm-44.3 0l12.6-12.6c.8-.8.8-2.1 0-2.8l-2.8-2.8c-.8-.8-2.1-.8-2.8 0L50 44.3 37.4 31.7c-.8-.8-2.1-.8-2.8 0l-2.8 2.8c-.8.8-.8 2.1 0 2.8L44.3 50 31.7 62.6c-.8.8-.8 2.1 0 2.8l2.8 2.8c.8.8 2.1.8 2.8 0L50 55.7l12.6 12.6c.8.8 2.1.8 2.8 0l2.8-2.8c.8-.8.8-2.1 0-2.8L55.7 50z"
              />
            </svg>
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer suggestionsContainer_withLabel"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
  <div
    class="autosuggestBackdrop backdrop_isMobile"
  />
</div>
`;

exports[`Autosuggest should render with mobile full width 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    role="combobox"
  >
    <div
      class="root"
    >
      <label
        class="LABEL_TEST_CLASS"
        for="Foo"
      >
        <span
          class="root baseline"
        >
          <span
            class=""
          >
            <strong
              class="root"
            >
              Foo
            </strong>
             
          </span>
        </span>
      </label>
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="Foo-message"
        autocomplete="off"
        class="input"
        id="Foo"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root sizeSmall clearRoot"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class=""
              focusable="false"
              role="img"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Negative
              </title>
              <path
                d="M100 50c0 27.6-22.4 50-50 50S0 77.6 0 50 22.4 0 50 0s50 22.4 50 50zm-44.3 0l12.6-12.6c.8-.8.8-2.1 0-2.8l-2.8-2.8c-.8-.8-2.1-.8-2.8 0L50 44.3 37.4 31.7c-.8-.8-2.1-.8-2.8 0l-2.8 2.8c-.8.8-.8 2.1 0 2.8L44.3 50 31.7 62.6c-.8.8-.8 2.1 0 2.8l2.8 2.8c.8.8 2.1.8 2.8 0L50 55.7l12.6 12.6c.8.8 2.1.8 2.8 0l2.8-2.8c.8-.8.8-2.1 0-2.8L55.7 50z"
              />
            </svg>
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer suggestionsContainer_withLabel suggestionsContainer_fullWidth"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
  <div
    class="autosuggestBackdrop"
  />
</div>
`;

exports[`Autosuggest should render with simple props 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    role="combobox"
  >
    <div
      class="root"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="undefined-message"
        autocomplete="off"
        class="input"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root sizeSmall clearRoot"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class=""
              focusable="false"
              role="img"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Negative
              </title>
              <path
                d="M100 50c0 27.6-22.4 50-50 50S0 77.6 0 50 22.4 0 50 0s50 22.4 50 50zm-44.3 0l12.6-12.6c.8-.8.8-2.1 0-2.8l-2.8-2.8c-.8-.8-2.1-.8-2.8 0L50 44.3 37.4 31.7c-.8-.8-2.1-.8-2.8 0l-2.8 2.8c-.8.8-.8 2.1 0 2.8L44.3 50 31.7 62.6c-.8.8-.8 2.1 0 2.8l2.8 2.8c.8.8 2.1.8 2.8 0L50 55.7l12.6 12.6c.8.8 2.1.8 2.8 0l2.8-2.8c.8-.8.8-2.1 0-2.8L55.7 50z"
              />
            </svg>
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
  <div
    class="autosuggestBackdrop"
  />
</div>
`;

exports[`Autosuggest should render with suggestions 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    role="combobox"
  >
    <div
      class="root"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="undefined-message"
        autocomplete="off"
        class="input"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root sizeSmall clearRoot"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class=""
              focusable="false"
              role="img"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Negative
              </title>
              <path
                d="M100 50c0 27.6-22.4 50-50 50S0 77.6 0 50 22.4 0 50 0s50 22.4 50 50zm-44.3 0l12.6-12.6c.8-.8.8-2.1 0-2.8l-2.8-2.8c-.8-.8-2.1-.8-2.8 0L50 44.3 37.4 31.7c-.8-.8-2.1-.8-2.8 0l-2.8 2.8c-.8.8-.8 2.1 0 2.8L44.3 50 31.7 62.6c-.8.8-.8 2.1 0 2.8l2.8 2.8c.8.8 2.1.8 2.8 0L50 55.7l12.6 12.6c.8.8 2.1.8 2.8 0l2.8-2.8c.8-.8.8-2.1 0-2.8L55.7 50z"
              />
            </svg>
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer"
      id="react-autowhatever-1"
      role="listbox"
    >
      <ul
        role="listbox"
      >
        <li
          aria-selected="false"
          data-suggestion-index="0"
          id="react-autowhatever-1--item-0"
          role="option"
        >
          <span
            class="suggestion"
          >
            test
          </span>
        </li>
        <li
          aria-selected="false"
          data-suggestion-index="1"
          id="react-autowhatever-1--item-1"
          role="option"
        >
          <span
            class="suggestion"
          >
            test 2
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="autosuggestBackdrop"
  />
</div>
`;
